--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,38 @@
 [flake8]
-max-line-length = 119
+max-line-length = 108
 application-import-names = telegram,tests
 import-order-style = smarkets
 ignore = D100,D104,D101,D107,E126
+exclude = .git,__pycache__,.pytest_cache,.cache,.venv
 per-file-ignores = 
     tests/**/*.py: D10
 
+[isort]
+profile = black
+known_first_party = tools
+
 [mypy]
-show_column_numbers = False
-ignore_missing_imports = True
+follow_imports = normal
+show_error_context = true
+ignore_missing_imports = true
+check_untyped_defs = true
+disallow_incomplete_defs = true
+cache_dir = /dev/null
+warn_redundant_casts = true
+warn_unused_configs = true
+warn_incomplete_stub = true
+warn_unused_ignores = true
+strict_optional = true
+no_implicit_optional = true
+strict_equality = true
+
+[tool:pytest]
+addopts = --strict-markers
+log_auto_indent = True
+junit_log_passing_tests = False
+junit_family = xunit2
+junit_logging = system-err
+
+[coverage:report]
+exclude_lines =
+    raise NotImplementedError
